--- a/index.html
+++ b/index.html
@@ -210,5 +210,6 @@
     <div class="ball-shadow" id="shadow"></div>
 
     <script src="script.js"></script>
+    <!-- SE ORDENO EL HTML  -->
 </body>
 </html>
