--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
             </div>
 
             <p>&copy; 2024 MiSitio Pro. Todos los derechos reservados.</p>
+            <p> Copyright 2025</p>
         </div>
     </footer>
 
